<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.inf3cm.priceresearch.SingUpActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_200"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_sign_up"
        android:text="@string/text_new_user"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        style="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView2">


        <ProgressBar
            android:id="@+id/progressBarSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/button_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_already"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_abandon_reset_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:id="@+id/linear_layout_bottom_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">



        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_button_normal"
            android:backgroundTint="@color/red"
            android:letterSpacing="0.04"
            android:padding="5dp"
            android:paddingStart="0dp"
            android:paddingTop="7dp"
            android:text="@string/text_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_full_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edit_normal"
        android:drawableRight="@drawable/ic_add"
        android:drawableTint="@color/black"
        android:hint="@string/text_full_name"
        android:inputType="text"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_sign_up"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edit_normal"
        android:drawableRight="@drawable/ic_email"
        android:drawableTint="@color/black"
        android:hint="@string/text_email"
        android:inputType="textEmailAddress"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_full_name"
        tools:layout_editor_absoluteX="25dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edit_normal"
        android:drawableRight="@drawable/ic_person"
        android:drawableTint="@color/black"
        android:hint="@string/text_user_name"
        android:inputType="text"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_email"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edit_normal"
        android:drawableRight="@drawable/ic_password"
        android:drawableTint="@color/black"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_user_name"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_password_sign_up_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edit_normal"
        android:drawableRight="@drawable/ic_password"
        android:drawableTint="@color/black"
        android:hint="@string/text_enter_the_password_again"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_sign_up"
        tools:layout_editor_absoluteX="-31dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_password_sign_up_"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edit_normal"
        android:drawableRight="@drawable/ic_password"
        android:drawableTint="@color/black"
        android:hint="@string/text_enter_the_password_again"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_sign_up_2"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_password_sign_up_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edit_normal"
        android:drawableRight="@drawable/ic_password"
        android:drawableTint="@color/black"
        android:hint="@string/text_enter_the_password_again"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_sign_up_"
        tools:layout_editor_absoluteX="-16dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_password_sign_up_4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edit_normal"
        android:drawableRight="@drawable/ic_password"
        android:drawableTint="@color/black"
        android:hint="@string/text_enter_the_password_again"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_sign_up_3"
        tools:layout_editor_absoluteX="-16dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_password_sign_up_5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edit_normal"
        android:drawableRight="@drawable/ic_password"
        android:drawableTint="@color/black"
        android:hint="@string/text_enter_the_password_again"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_sign_up_4"
        tools:layout_editor_absoluteX="0dp" /><![CDATA[





    />]]>