<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_200"
    android:focusable="true"
    android:focusableInTouchMode="false"
    android:scaleType="centerCrop">
    <!--imagem dando erro-->

    <androidx.appcompat.widget.AppCompatImageView

        android:id="@+id/appCompatImageView"
        android:layout_width="228dp"
        android:layout_height="375dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/scrollViewRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_sign_up"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/text_new_user"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewRegistrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_full_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_edit_normal"
                android:drawableRight="@drawable/ic_full_name"
                android:drawableTint="@color/black"
                android:hint="@string/text_full_name"
                android:inputType="text"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@id/editText_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_edit_normal"
                android:drawableRight="@drawable/ic_email"
                android:drawableTint="@color/black"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@id/editText_user_name" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_user_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_edit_normal"
                android:drawableRight="@drawable/ic_person"
                android:drawableTint="@color/black"
                android:hint="@string/text_user_name"
                android:inputType="text"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@id/editText_password_sign_up" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_edit_normal"
                android:drawableRight="@drawable/ic_password"
                android:drawableTint="@color/black"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@id/progressBarSignUp" />

            <ProgressBar
                android:id="@+id/progressBarSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/button_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_button_normal"
                android:backgroundTint="@color/red"
                android:letterSpacing="0.04"
                android:paddingStart="90dp"
                android:paddingTop="7dp"
                android:text="@string/text_new_user"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/linear_layout_bottom_signup" />


            <LinearLayout
                android:id="@+id/linear_layout_bottom_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView_already"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:text="@string/already_have_an_account_login"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>